# STG

./: .gitignore  CMakeLists.txt  README.md  charactor.cpp  charactor.h  game.cpp  game.h  game_event.cpp  game_event.h  input_processor.cpp  input_processor.h  main.cpp  resource_manger.cpp  resource_manger.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
_lost/: texture copy.cpp  texture copy.h
shader/: sprite.frag  sprite.vert
